# fun-with-automata

./: .gitignore  CA.cabal  CA.lhs  README.md  makefile
docs/: CA.html  style.txt
