cabal-version:  2.4
name:           CA
version:        0.0.0.0
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

library
  default-language: Haskell2010
  hs-source-dirs: .
  exposed-modules:
      CA
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , JuicyPixels >=3.3.3.1
